--- a/Natours/index.html
+++ b/Natours/index.html
@@ -64,7 +64,10 @@
                </a>
             </div>
             <div class="col-1-of-2">
-              col-1-of-2
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="natoure1" class="composition__photo composition__photo--p1">
+              <img src="img/nat-2-large.jpg" alt="natoure2" class="composition__photo composition__photo--p2">
+              <img src="img/nat-3-large.jpg" alt="natoure3 " class="composition__photo composition__photo--p3"></div>
             </div>
           </div>
           
