--- a/Natours/index.html
+++ b/Natours/index.html
@@ -263,6 +263,62 @@
           </div>
         </section>
 
+        <section class="section-stories">
+          <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/mp4">
+            Your browser is not supported  
+            </video>
+          </div>
+          <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+              We make people genuinly happy
+            </h2>
+          </div>
+          <div class="row">
+            <div class="story">
+              <figure class="story__shape">
+                <img src="img/nat-8.jpg" alt="Person on a tour" class="story__image">
+                <figcaption class="story__caption">
+                  Mary Smith
+                </figcaption>
+              </figure>
+              <div class="story__text">
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                  I had the best week ever
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis molestiae ad ipsam voluptatem natus,
+                   saepe ducimus cumque magni cum accusantium ex! Et consectetur laboriosam ipsa! Praesentium laudantium unde eos architecto.
+                </p>
+              </div>
+            </div>
+            <div class="story">
+              <figure class="story__shape">
+                <img src="img/nat-9.jpg" alt="Person on a tour" class="story__image">
+                <figcaption class="story__caption">
+                 Akhilesh yadav
+                </figcaption>
+              </figure>
+              <div class="story__text">
+                <h3 class="heading-tertiary u-margin-bottom-small">
+                  Wow My life compleetly different now
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis molestiae ad ipsam voluptatem natus,
+                   saepe ducimus cumque magni cum accusantium ex! Et consectetur laboriosam ipsa! Praesentium laudantium unde eos architecto.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="u-center-text u-margin-bottom-big">
+            <a href="#" class=" btn-text">
+              Read all stories &rarr;
+            </a>
+          </div>
+        </section>
+
 
       </main>
 
