--- a/Natours/index.html
+++ b/Natours/index.html
@@ -339,7 +339,21 @@
                   <label for="email" class="form__label">
                   Email
                   </label>
-                </div>                  
+                </div>
+                <div class="form__group">
+                 
+                  <div class="form__radio">
+                    <input type="radio" class="form__radio-input" id="small" name="size">
+                    <label for="small" class="form__radio-label">Small tour group</label>
+                    <span class="form__radio-button"></span>
+                  </div>
+                  <div class="form__radio">
+                  <input type="radio" class="form__radio-input" id="large" name="size">
+                  <label for="large" class="form__radio-label">Large tour group</label>
+                  <span class="form__radio-button"></span>
+                </div>
+                </div>
+                             
                 </form>
               </div>
             </div>
