--- a/Natours/index.html
+++ b/Natours/index.html
@@ -340,7 +340,7 @@
                   Email
                   </label>
                 </div>
-                <div class="form__group">
+                <div class="form__group u-margin-bottom-big">
                  
                   <div class="form__radio">
                     <input type="radio" class="form__radio-input" id="small" name="size">
@@ -353,8 +353,15 @@
                   <span class="form__radio-button"></span>
                 </div>
                 </div>
+
+                <div class="form__group ">
+                  <button type="submit" class="btn btn--green">
+                    Next Stop &rarr;
+                  </button>
+                </div>
                              
                 </form>
+
               </div>
             </div>
           </div>
