--- a/Natours/index.html
+++ b/Natours/index.html
@@ -214,7 +214,7 @@
                     $297
                   </p>
                 </div>
-                <a href="" class="btn btn--white">Book Now</a>
+                <a href="#popup" class="btn btn--white">Book Now</a>
               </div>
              </div>
               </div>
@@ -251,7 +251,7 @@
                     $200
                   </p>
                 </div>
-                <a href="" class="btn btn--white">Book Now</a>
+                <a href="#popup" class="btn btn--white">Book Now</a>
               </div>
              </div>
               </div>
@@ -288,7 +288,7 @@
                     $197
                   </p>
                 </div>
-                <a href="" class="btn btn--white">Book Now</a>
+                <a href="#popup" class="btn btn--white">Book Now</a>
               </div>
              </div>
               </div>
@@ -455,6 +455,30 @@
           </div>
         </div>
       </footer>
+
+      <div class="popup" id="popup">
+        <div class="popup__content">
+          <div class="popup__left">
+            <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+            <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+          </div>
+          <div class="popup__right">
+            <a href="#section-tours" class="popup__close">&times;</a>
+            <h2 class="heading-secondary u-margin-bottom-small">
+              Start booking now
+            </h2>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Importent &ndash; Please read these terms before bookin.
+            </h3>
+            <p class="popup__text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum atque, illo sed laudantium soluta libero expedita sequi error fuga hic amet facere nihil est placeat blanditiis eum molestiae. Officia, voluptatem.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo ducimus aut neque modi. Vitae nobis eum vel qui assumenda veritatis eaque laborum laudantium perferendis tempora ullam, id magni reiciendis iusto?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quisquam numquam, ullam, expedita fugit deserunt iure nihil possimus commodi vel error quia labore voluptas dicta amet sed mollitia, eos enim!
+            </p>
+            <a href="#" class="btn btn--green">Book now</a>
+          </div>
+        </div>
+      </div>
 
 
       <!-- <section class="grid-test">
